Add search bar for filtering beers

--- a/app/beer-list/beer-list.template.html
+++ b/app/beer-list/beer-list.template.html
@@ -1,3 +1,7 @@
+<div>
+  <span>Enter a search term: </span>
+  <input ng-model="$ctrl.query" type="text" placeholder="Enter beer or brewery"/>
+</div>
 <table>
   <thead>
     <td>Name</td>
@@ -6,7 +10,7 @@
     <td>Score</td>
   </thead>
   <tbody>
-    <tr ng-repeat="beer in $ctrl.beers">
+    <tr ng-repeat="beer in $ctrl.beers | beerFilter:$ctrl.query">
       <td>{{beer.name}}</td>
       <td>{{beer.brewery}}</td>
       <td>{{beer.abv}}</td>
