--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,7 @@
   <head>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
     <script src="app.js"></script>
+    <script src="filters/beer-filter.js"></script>
     <script src="beer-list/beer-list.module.js"></script>
     <script src="beer-list/beer-list.component.js"></script>
   </head>
