--- a/app/index.html
+++ b/app/index.html
@@ -2,10 +2,15 @@
 <html ng-app="beerApp">
   <head>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+    <!-- app file -->
     <script src="app.js"></script>
+    <!-- filters -->
     <script src="filters/beer-filter.js"></script>
-    <script src="beer-list/beer-list.module.js"></script>
-    <script src="beer-list/beer-list.component.js"></script>
+    <!-- styling -->
+    <link rel="stylesheet" src="css/beer.css"/>
+    <!-- components -->
+    <script src="components/beer-list/beer-list.module.js"></script>
+    <script src="components/beer-list/beer-list.component.js"></script>
   </head>
   <body>
     <beer-list></beer-list>
