Add title for page in index.html

--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
     <script src="components/beer-list/beer-list.component.js"></script>
   </head>
   <body>
+    <h1>Christmas beers of the world</h1>
     <beer-list></beer-list>
   </body>
 </html>
