Fix stylesheet link

--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
     <!-- filters -->
     <script src="filters/beer-filter.js"></script>
     <!-- styling -->
-    <link rel="stylesheet" src="css/beer.css"/>
+    <link rel="stylesheet" type="text/css" href="css/beer.css"/>
     <!-- components -->
     <script src="components/beer-list/beer-list.module.js"></script>
     <script src="components/beer-list/beer-list.component.js"></script>
